src/Saga/Parser/ParserV2.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ./src/Saga/Parser/ParserV2.y
-----------------------------------------------------------------------------


rule 41 is unused
rule 51 is unused
rule 52 is unused
rule 53 is unused
rule 90 is unused
rule 91 is unused
rule 110 is unused
rule 111 is unused

terminal '-' is unused
terminal '*' is unused
terminal '/' is unused
terminal '^' is unused
terminal '++' is unused
terminal '==' is unused
terminal '!=' is unused
terminal '<' is unused
terminal '<=' is unused
terminal '>' is unused
terminal '>=' is unused
terminal '||' is unused
terminal '&&' is unused
terminal '|>' is unused
terminal '<|' is unused
terminal '#' is unused
terminal op is unused
terminal in is unused
terminal with is unused
terminal alias is unused
terminal kind is unused
terminal forall is unused
terminal exists is unused
terminal proof is unused
terminal infer is unused
terminal protocol is unused
terminal interface is unused
terminal module is unused
terminal import is unused
terminal newline is unused
terminal eof is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseSagaExpr -> expr                       (0)
	%start_parseSagaDec -> dec                         (1)
	%start_parseSagaScript -> script                   (2)
	identifier -> id                                   (3)
	hole -> HOLE                                       (4)
	expr -> expr1                                      (5)
	expr1 -> expr2                                     (6)
	expr1 -> expr1 '+' expr2                           (7)
	expr2 -> expr3                                     (8)
	expr2 -> expr2 '`' exprBacktick '`' expr3          (9)
	exprBacktick -> expr3                              (10)
	exprBacktick -> exprBacktick '+' expr3             (11)
	expr3 -> expr4                                     (12)
	expr3 -> expr3 expr4                               (13)
	expr3 -> expr3 '!'                                 (14)
	expr4 -> expr5                                     (15)
	expr4 -> expr4 '.' identifier                      (16)
	expr5 -> expr6                                     (17)
	expr5 -> if expr then expr else expr               (18)
	expr5 -> match expr cases                          (19)
	expr5 -> '\\' manyOrEmpty__pattern__ '->' expr     (20)
	expr5 -> '.' identifier                            (21)
	expr6 -> exprAtom                                  (22)
	expr6 -> '{' block '}'                             (23)
	block -> separated__statement__';'__ trailing__';'__   (24)
	statement -> separated__pattern__','__ '<-' expr   (25)
	statement -> expr                                  (26)
	statement -> return expr                           (27)
	exprAtom -> hole                                   (28)
	exprAtom -> identifier                             (29)
	exprAtom -> term                                   (30)
	exprAtom -> tuple                                  (31)
	exprAtom -> list                                   (32)
	exprAtom -> record                                 (33)
	exprAtom -> '(' expr ')'                           (34)
	term -> number                                     (35)
	term -> string                                     (36)
	term -> boolean                                    (37)
	record -> '{' pairs '}'                            (38)
	pairs ->                                           (39)
	pairs -> identifier ':' expr ';' pairs             (40)
	pairs -> identifier ':' expr ';'                   (41)
	list -> '[' separatedOrEmpty__expr__','__ ']'      (42)
	tuple -> '(' separated__expr__','__ ')'            (43)
	pattern -> patternAtom                             (44)
	pattern -> identifier ':' many__patternAtom__      (45)
	patternAtom -> identifier                          (46)
	patternAtom -> hole                                (47)
	patternAtom -> term                                (48)
	patternAtom -> '(' separated__pattern__','__ trailing__patRest__ ')'   (49)
	patternAtom -> '(' pattern ')'                     (50)
	patRecordKeys ->                                   (51)
	patRecordKeys -> identifier                        (52)
	patRecordKeys -> identifier ',' patRecordKeys      (53)
	patRest -> '|' identifier                          (54)
	cases -> '|' pattern '->' expr                     (55)
	cases -> cases '|' pattern '->' expr               (56)
	typeExpr -> typeExpr1                              (57)
	typeExpr -> union                                  (58)
	typeExpr1 -> typeExpr2                             (59)
	typeExpr1 -> identifier ':' typeExpr               (60)
	union -> '|' typeExpr                              (61)
	union -> union '|' typeExpr                        (62)
	typeExpr2 -> typeExpr3                             (63)
	typeExpr2 -> typeExpr2 '->' typeExpr               (64)
	typeExpr3 -> typeExpr4                             (65)
	typeExpr3 -> typeExpr3 typeExpr4                   (66)
	typeExpr3 -> typeExpr3 '!'                         (67)
	typeExpr4 -> typeExpr5                             (68)
	typeExpr4 -> '\\' many__identifier__ '=>' typeExpr   (69)
	typeExpr5 -> typeAtom                              (70)
	typeAtom -> number                                 (71)
	typeAtom -> boolean                                (72)
	typeAtom -> string                                 (73)
	typeAtom -> identifier                             (74)
	typeAtom -> '(' typeExpr ')'                       (75)
	typeAtom -> '(' separated__typeExpr__','__ ')'     (76)
	typeAtom -> '{' tpairs '}'                         (77)
	tpairs ->                                          (78)
	tpairs -> identifier ':' typeExpr ',' tpairs       (79)
	tpairs -> identifier ':' typeExpr                  (80)
	script -> many__dec__                              (81)
	dec -> letdec                                      (82)
	dec -> let identifier typeAnnotation kindAnnotation '=' expr where many__binding__   (83)
	dec -> data identifier kindAnnotation '=' dataExprs   (84)
	dec -> data identifier kindAnnotation '=' dataExprs where many__tbinding__   (85)
	dec -> ty identifier kindAnnotation '=' typeExpr   (86)
	dec -> ty identifier kindAnnotation '=' typeExpr where many__tbinding__   (87)
	letdec -> let identifier typeAnnotation kindAnnotation '=' expr   (88)
	binding -> identifier '=' expr                     (89)
	bindings -> binding                                (90)
	bindings -> bindings ',' binding                   (91)
	tbinding -> identifier '=' typeExpr                (92)
	tbinding -> identifier implements typeExpr         (93)
	tbinding -> identifier '|->' typeExpr              (94)
	tbinding -> identifier '|' typeExpr                (95)
	tbindings -> tbinding                              (96)
	tbindings -> tbindings ',' tbinding                (97)
	typeAnnotation ->                                  (98)
	typeAnnotation -> ':' typeExpr                     (99)
	typeAnnotation -> ':' typeExpr where tbindings     (100)
	typeAnnotation -> ':' instance identifier ':' typeExpr   (101)
	kindAnnotation ->                                  (102)
	kindAnnotation -> '::' kindExpr                    (103)
	kindExpr -> kindExpr '->' kindExpr                 (104)
	kindExpr -> '(' kindExpr ')'                       (105)
	kindExpr -> identifier                             (106)
	dataExpr -> identifier ':' typeExpr                (107)
	dataExprs -> dataExpr                              (108)
	dataExprs -> dataExprs '|' dataExpr                (109)
	defaultSeparator -> ','                            (110)
	defaultSeparator -> ';'                            (111)
	many__binding__ -> binding                         (112)
	many__binding__ -> many__binding__ binding         (113)
	many__dec__ -> dec                                 (114)
	many__dec__ -> many__dec__ dec                     (115)
	many__identifier__ -> identifier                   (116)
	many__identifier__ -> many__identifier__ identifier   (117)
	many__patternAtom__ -> patternAtom                 (118)
	many__patternAtom__ -> many__patternAtom__ patternAtom   (119)
	many__tbinding__ -> tbinding                       (120)
	many__tbinding__ -> many__tbinding__ tbinding      (121)
	manyOrEmpty__pattern__ ->                          (122)
	manyOrEmpty__pattern__ -> many__pattern__          (123)
	separated__expr__','__ -> expr                     (124)
	separated__expr__','__ -> separated__expr__','__ ',' expr   (125)
	separated__pattern__','__ -> pattern               (126)
	separated__pattern__','__ -> separated__pattern__','__ ',' pattern   (127)
	separated__statement__';'__ -> statement           (128)
	separated__statement__';'__ -> separated__statement__';'__ ';' statement   (129)
	separated__typeExpr__','__ -> typeExpr             (130)
	separated__typeExpr__','__ -> separated__typeExpr__','__ ',' typeExpr   (131)
	separatedOrEmpty__expr__','__ ->                   (132)
	separatedOrEmpty__expr__','__ -> separated__expr__','__   (133)
	trailing__';'__ ->                                 (134)
	trailing__';'__ -> ';'                             (135)
	trailing__patRest__ ->                             (136)
	trailing__patRest__ -> patRest                     (137)
	many__pattern__ -> pattern                         (138)
	many__pattern__ -> many__pattern__ pattern         (139)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	id             { L.RangedToken (T.Id _) _ }
	HOLE           { L.RangedToken (T.Hole _) _ }
	number         { L.RangedToken (T.Number _) _ }
	string         { L.RangedToken (T.String _) _ }
	boolean        { L.RangedToken (T.Boolean _) _ }
	'!'            { L.RangedToken (T.Operator "!") _ }
	'+'            { L.RangedToken (T.Operator "+") _ }
	'-'            { L.RangedToken (T.Operator "-") _ }
	'*'            { L.RangedToken (T.Operator "*") _ }
	'/'            { L.RangedToken (T.Operator "/") _ }
	'^'            { L.RangedToken (T.Operator "^") _ }
	'++'           { L.RangedToken (T.Operator "++") _ }
	'=='           { L.RangedToken (T.Operator "==") _ }
	'!='           { L.RangedToken (T.Operator "!=") _ }
	'<'            { L.RangedToken (T.Operator "<") _ }
	'<='           { L.RangedToken (T.Operator "<=") _ }
	'>'            { L.RangedToken (T.Operator ">") _ }
	'>='           { L.RangedToken (T.Operator ">=") _ }
	'||'           { L.RangedToken (T.Operator "||") _ }
	'&&'           { L.RangedToken (T.Operator "&&") _ }
	'|>'           { L.RangedToken (T.Operator "|>") _ }
	'<|'           { L.RangedToken (T.Operator "<|") _ }
	'`'            { L.RangedToken (T.Operator "<|") _ }
	'#'            { L.RangedToken (T.Operator "#") _ }
	op             { L.RangedToken (T.Operator _) _ }
	let            { L.RangedToken T.Let _ }
	in             { L.RangedToken T.In _ }
	where          { L.RangedToken T.Where _ }
	with           { L.RangedToken T.With _ }
	if             { L.RangedToken T.If _ }
	then           { L.RangedToken T.Then _ }
	else           { L.RangedToken T.Else _ }
	match          { L.RangedToken T.Match _ }
	return         { L.RangedToken T.Return _ }
	data           { L.RangedToken T.Data _ }
	ty             { L.RangedToken T.Type _ }
	alias          { L.RangedToken T.Alias _ }
	kind           { L.RangedToken T.Kind _ }
	forall         { L.RangedToken T.Forall _ }
	exists         { L.RangedToken T.Exists _ }
	proof          { L.RangedToken T.Proof _ }
	infer          { L.RangedToken T.Infer _ }
	protocol       { L.RangedToken T.Protocol _ }
	interface      { L.RangedToken T.Interface _ }
	instance       { L.RangedToken T.Instance _ }
	implements     { L.RangedToken T.Implements _ }
	module         { L.RangedToken T.Module _ }
	import         { L.RangedToken T.Import _ }
	'('            { L.RangedToken T.LParen _ }
	')'            { L.RangedToken T.RParen _ }
	'['            { L.RangedToken T.LBrack _ }
	']'            { L.RangedToken T.RBrack _ }
	'{'            { L.RangedToken T.LCurly _ }
	'}'            { L.RangedToken T.RCurly _ }
	':'            { L.RangedToken T.Colon _ }
	';'            { L.RangedToken T.SemiColon _ }
	','            { L.RangedToken T.Comma _ }
	'->'           { L.RangedToken T.Arrow _ }
	'<-'           { L.RangedToken T.BackArrow _ }
	'=>'           { L.RangedToken T.FatArrow _ }
	'|->'          { L.RangedToken T.PipeArrow _ }
	'='            { L.RangedToken T.Equals _ }
	'|'            { L.RangedToken T.Pipe _ }
	'.'            { L.RangedToken T.Dot _ }
	'::'           { L.RangedToken T.Section _ }
	'\\'           { L.RangedToken T.BackSlash _ }
	newline        { L.RangedToken T.Newline _ }
	eof            { L.RangedToken T.EOF _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseSagaExpr rule  0
	%start_parseSagaDec rule  1
	%start_parseSagaScript rule  2
	identifier      rule  3
	hole            rule  4
	expr            rule  5
	expr1           rules 6, 7
	expr2           rules 8, 9
	exprBacktick    rules 10, 11
	expr3           rules 12, 13, 14
	expr4           rules 15, 16
	expr5           rules 17, 18, 19, 20, 21
	expr6           rules 22, 23
	block           rule  24
	statement       rules 25, 26, 27
	exprAtom        rules 28, 29, 30, 31, 32, 33, 34
	term            rules 35, 36, 37
	record          rule  38
	pairs           rules 39, 40, 41
	list            rule  42
	tuple           rule  43
	pattern         rules 44, 45
	patternAtom     rules 46, 47, 48, 49, 50
	patRecordKeys   rules 51, 52, 53
	patRest         rule  54
	cases           rules 55, 56
	typeExpr        rules 57, 58
	typeExpr1       rules 59, 60
	union           rules 61, 62
	typeExpr2       rules 63, 64
	typeExpr3       rules 65, 66, 67
	typeExpr4       rules 68, 69
	typeExpr5       rule  70
	typeAtom        rules 71, 72, 73, 74, 75, 76, 77
	tpairs          rules 78, 79, 80
	script          rule  81
	dec             rules 82, 83, 84, 85, 86, 87
	letdec          rule  88
	binding         rule  89
	bindings        rules 90, 91
	tbinding        rules 92, 93, 94, 95
	tbindings       rules 96, 97
	typeAnnotation  rules 98, 99, 100, 101
	kindAnnotation  rules 102, 103
	kindExpr        rules 104, 105, 106
	dataExpr        rule  107
	dataExprs       rules 108, 109
	defaultSeparator rules 110, 111
	many__binding__ rules 112, 113
	many__dec__     rules 114, 115
	many__identifier__ rules 116, 117
	many__patternAtom__ rules 118, 119
	many__tbinding__ rules 120, 121
	manyOrEmpty__pattern__ rules 122, 123
	separated__expr__','__ rules 124, 125
	separated__pattern__','__ rules 126, 127
	separated__statement__';'__ rules 128, 129
	separated__typeExpr__','__ rules 130, 131
	separatedOrEmpty__expr__','__ rules 132, 133
	trailing__';'__ rules 134, 135
	trailing__patRest__ rules 136, 137
	many__pattern__ rules 138, 139

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseSagaExpr -> . expr                      (rule 0)

	id             shift, and enter state 4
	HOLE           shift, and enter state 27
	number         shift, and enter state 28
	string         shift, and enter state 29
	boolean        shift, and enter state 30
	if             shift, and enter state 31
	match          shift, and enter state 32
	'('            shift, and enter state 33
	'['            shift, and enter state 34
	'{'            shift, and enter state 35
	'.'            shift, and enter state 36
	'\\'           shift, and enter state 37

	identifier     goto state 13
	hole           goto state 14
	expr           goto state 15
	expr1          goto state 16
	expr2          goto state 17
	expr3          goto state 18
	expr4          goto state 19
	expr5          goto state 20
	expr6          goto state 21
	exprAtom       goto state 22
	term           goto state 23
	record         goto state 24
	list           goto state 25
	tuple          goto state 26

State 1

	%start_parseSagaDec -> . dec                        (rule 1)

	let            shift, and enter state 9
	data           shift, and enter state 10
	ty             shift, and enter state 11

	dec            goto state 12
	letdec         goto state 7

State 2

	%start_parseSagaScript -> . script                  (rule 2)

	let            shift, and enter state 9
	data           shift, and enter state 10
	ty             shift, and enter state 11

	script         goto state 5
	dec            goto state 6
	letdec         goto state 7
	many__dec__    goto state 8

State 3

	identifier -> . id                                  (rule 3)

	id             shift, and enter state 4


State 4

	identifier -> id .                                  (rule 3)

	id             reduce using rule 3
	HOLE           reduce using rule 3
	number         reduce using rule 3
	string         reduce using rule 3
	boolean        reduce using rule 3
	'!'            reduce using rule 3
	'+'            reduce using rule 3
	'`'            reduce using rule 3
	let            reduce using rule 3
	where          reduce using rule 3
	if             reduce using rule 3
	then           reduce using rule 3
	else           reduce using rule 3
	match          reduce using rule 3
	data           reduce using rule 3
	ty             reduce using rule 3
	implements     reduce using rule 3
	'('            reduce using rule 3
	')'            reduce using rule 3
	'['            reduce using rule 3
	']'            reduce using rule 3
	'{'            reduce using rule 3
	'}'            reduce using rule 3
	':'            reduce using rule 3
	';'            reduce using rule 3
	','            reduce using rule 3
	'->'           reduce using rule 3
	'<-'           reduce using rule 3
	'=>'           reduce using rule 3
	'|->'          reduce using rule 3
	'='            reduce using rule 3
	'|'            reduce using rule 3
	'.'            reduce using rule 3
	'::'           reduce using rule 3
	'\\'           reduce using rule 3
	%eof           reduce using rule 3


State 5

	%start_parseSagaScript -> script .                  (rule 2)

	%eof           accept


State 6

	many__dec__ -> dec .                                (rule 114)

	let            reduce using rule 114
	data           reduce using rule 114
	ty             reduce using rule 114
	%eof           reduce using rule 114


State 7

	dec -> letdec .                                     (rule 82)

	let            reduce using rule 82
	data           reduce using rule 82
	ty             reduce using rule 82
	%eof           reduce using rule 82


State 8

	script -> many__dec__ .                             (rule 81)
	many__dec__ -> many__dec__ . dec                    (rule 115)

	let            shift, and enter state 9
	data           shift, and enter state 10
	ty             shift, and enter state 11
	%eof           reduce using rule 81

	dec            goto state 74
	letdec         goto state 7

State 9

	dec -> let . identifier typeAnnotation kindAnnotation '=' expr where many__binding__    (rule 83)
	letdec -> let . identifier typeAnnotation kindAnnotation '=' expr    (rule 88)

	id             shift, and enter state 4

	identifier     goto state 73

State 10

	dec -> data . identifier kindAnnotation '=' dataExprs    (rule 84)
	dec -> data . identifier kindAnnotation '=' dataExprs where many__tbinding__    (rule 85)

	id             shift, and enter state 4

	identifier     goto state 72

State 11

	dec -> ty . identifier kindAnnotation '=' typeExpr    (rule 86)
	dec -> ty . identifier kindAnnotation '=' typeExpr where many__tbinding__    (rule 87)

	id             shift, and enter state 4

	identifier     goto state 71

State 12

	%start_parseSagaDec -> dec .                        (rule 1)

	%eof           accept


State 13

	exprAtom -> identifier .                            (rule 29)

	id             reduce using rule 29
	HOLE           reduce using rule 29
	number         reduce using rule 29
	string         reduce using rule 29
	boolean        reduce using rule 29
	'!'            reduce using rule 29
	'+'            reduce using rule 29
	'`'            reduce using rule 29
	let            reduce using rule 29
	where          reduce using rule 29
	if             reduce using rule 29
	then           reduce using rule 29
	else           reduce using rule 29
	match          reduce using rule 29
	data           reduce using rule 29
	ty             reduce using rule 29
	'('            reduce using rule 29
	')'            reduce using rule 29
	'['            reduce using rule 29
	']'            reduce using rule 29
	'{'            reduce using rule 29
	'}'            reduce using rule 29
	';'            reduce using rule 29
	','            reduce using rule 29
	'|'            reduce using rule 29
	'.'            reduce using rule 29
	'\\'           reduce using rule 29
	%eof           reduce using rule 29


State 14

	exprAtom -> hole .                                  (rule 28)

	id             reduce using rule 28
	HOLE           reduce using rule 28
	number         reduce using rule 28
	string         reduce using rule 28
	boolean        reduce using rule 28
	'!'            reduce using rule 28
	'+'            reduce using rule 28
	'`'            reduce using rule 28
	let            reduce using rule 28
	where          reduce using rule 28
	if             reduce using rule 28
	then           reduce using rule 28
	else           reduce using rule 28
	match          reduce using rule 28
	data           reduce using rule 28
	ty             reduce using rule 28
	'('            reduce using rule 28
	')'            reduce using rule 28
	'['            reduce using rule 28
	']'            reduce using rule 28
	'{'            reduce using rule 28
	'}'            reduce using rule 28
	';'            reduce using rule 28
	','            reduce using rule 28
	'|'            reduce using rule 28
	'.'            reduce using rule 28
	'\\'           reduce using rule 28
	%eof           reduce using rule 28


State 15

	%start_parseSagaExpr -> expr .                      (rule 0)

	%eof           accept


State 16

	expr -> expr1 .                                     (rule 5)
	expr1 -> expr1 . '+' expr2                          (rule 7)

	id             reduce using rule 5
	HOLE           reduce using rule 5
	number         reduce using rule 5
	string         reduce using rule 5
	boolean        reduce using rule 5
	'!'            reduce using rule 5
	'+'            shift, and enter state 70
	'`'            reduce using rule 5
	let            reduce using rule 5
	where          reduce using rule 5
	if             reduce using rule 5
	then           reduce using rule 5
	else           reduce using rule 5
	match          reduce using rule 5
	data           reduce using rule 5
	ty             reduce using rule 5
	'('            reduce using rule 5
	')'            reduce using rule 5
	'['            reduce using rule 5
	']'            reduce using rule 5
	'{'            reduce using rule 5
	'}'            reduce using rule 5
	';'            reduce using rule 5
	','            reduce using rule 5
	'|'            reduce using rule 5
	'.'            reduce using rule 5
	'\\'           reduce using rule 5
	%eof           reduce using rule 5


State 17

	expr1 -> expr2 .                                    (rule 6)
	expr2 -> expr2 . '`' exprBacktick '`' expr3         (rule 9)

	id             reduce using rule 6
	HOLE           reduce using rule 6
	number         reduce using rule 6
	string         reduce using rule 6
	boolean        reduce using rule 6
	'!'            reduce using rule 6
	'+'            reduce using rule 6
	'`'            shift, and enter state 69
	let            reduce using rule 6
	where          reduce using rule 6
	if             reduce using rule 6
	then           reduce using rule 6
	else           reduce using rule 6
	match          reduce using rule 6
	data           reduce using rule 6
	ty             reduce using rule 6
	'('            reduce using rule 6
	')'            reduce using rule 6
	'['            reduce using rule 6
	']'            reduce using rule 6
	'{'            reduce using rule 6
	'}'            reduce using rule 6
	';'            reduce using rule 6
	','            reduce using rule 6
	'|'            reduce using rule 6
	'.'            reduce using rule 6
	'\\'           reduce using rule 6
	%eof           reduce using rule 6


State 18

	expr2 -> expr3 .                                    (rule 8)
	expr3 -> expr3 . expr4                              (rule 13)
	expr3 -> expr3 . '!'                                (rule 14)

	id             shift, and enter state 4
	HOLE           shift, and enter state 27
	number         shift, and enter state 28
	string         shift, and enter state 29
	boolean        shift, and enter state 30
	'!'            shift, and enter state 68
	'+'            reduce using rule 8
	'`'            reduce using rule 8
	let            reduce using rule 8
	where          reduce using rule 8
	if             shift, and enter state 31
	then           reduce using rule 8
	else           reduce using rule 8
	match          shift, and enter state 32
	data           reduce using rule 8
	ty             reduce using rule 8
	'('            shift, and enter state 33
	')'            reduce using rule 8
	'['            shift, and enter state 34
	']'            reduce using rule 8
	'{'            shift, and enter state 35
	'}'            reduce using rule 8
	';'            reduce using rule 8
	','            reduce using rule 8
	'|'            reduce using rule 8
	'.'            shift, and enter state 36
	'\\'           shift, and enter state 37
	%eof           reduce using rule 8

	identifier     goto state 13
	hole           goto state 14
	expr4          goto state 67
	expr5          goto state 20
	expr6          goto state 21
	exprAtom       goto state 22
	term           goto state 23
	record         goto state 24
	list           goto state 25
	tuple          goto state 26

State 19

	expr3 -> expr4 .                                    (rule 12)
	expr4 -> expr4 . '.' identifier                     (rule 16)

	id             reduce using rule 12
	HOLE           reduce using rule 12
	number         reduce using rule 12
	string         reduce using rule 12
	boolean        reduce using rule 12
	'!'            reduce using rule 12
	'+'            reduce using rule 12
	'`'            reduce using rule 12
	let            reduce using rule 12
	where          reduce using rule 12
	if             reduce using rule 12
	then           reduce using rule 12
	else           reduce using rule 12
	match          reduce using rule 12
	data           reduce using rule 12
	ty             reduce using rule 12
	'('            reduce using rule 12
	')'            reduce using rule 12
	'['            reduce using rule 12
	']'            reduce using rule 12
	'{'            reduce using rule 12
	'}'            reduce using rule 12
	';'            reduce using rule 12
	','            reduce using rule 12
	'|'            reduce using rule 12
	'.'            shift, and enter state 66
	'\\'           reduce using rule 12
	%eof           reduce using rule 12


State 20

	expr4 -> expr5 .                                    (rule 15)

	id             reduce using rule 15
	HOLE           reduce using rule 15
	number         reduce using rule 15
	string         reduce using rule 15
	boolean        reduce using rule 15
	'!'            reduce using rule 15
	'+'            reduce using rule 15
	'`'            reduce using rule 15
	let            reduce using rule 15
	where          reduce using rule 15
	if             reduce using rule 15
	then           reduce using rule 15
	else           reduce using rule 15
	match          reduce using rule 15
	data           reduce using rule 15
	ty             reduce using rule 15
	'('            reduce using rule 15
	')'            reduce using rule 15
	'['            reduce using rule 15
	']'            reduce using rule 15
	'{'            reduce using rule 15
	'}'            reduce using rule 15
	';'            reduce using rule 15
	','            reduce using rule 15
	'|'            reduce using rule 15
	'.'            reduce using rule 15
	'\\'           reduce using rule 15
	%eof           reduce using rule 15


State 21

	expr5 -> expr6 .                                    (rule 17)

	id             reduce using rule 17
	HOLE           reduce using rule 17
	number         reduce using rule 17
	string         reduce using rule 17
	boolean        reduce using rule 17
	'!'            reduce using rule 17
	'+'            reduce using rule 17
	'`'            reduce using rule 17
	let            reduce using rule 17
	where          reduce using rule 17
	if             reduce using rule 17
	then           reduce using rule 17
	else           reduce using rule 17
	match          reduce using rule 17
	data           reduce using rule 17
	ty             reduce using rule 17
	'('            reduce using rule 17
	')'            reduce using rule 17
	'['            reduce using rule 17
	']'            reduce using rule 17
	'{'            reduce using rule 17
	'}'            reduce using rule 17
	';'            reduce using rule 17
	','            reduce using rule 17
	'|'            reduce using rule 17
	'.'            reduce using rule 17
	'\\'           reduce using rule 17
	%eof           reduce using rule 17


State 22

	expr6 -> exprAtom .                                 (rule 22)

	id             reduce using rule 22
	HOLE           reduce using rule 22
	number         reduce using rule 22
	string         reduce using rule 22
	boolean        reduce using rule 22
	'!'            reduce using rule 22
	'+'            reduce using rule 22
	'`'            reduce using rule 22
	let            reduce using rule 22
	where          reduce using rule 22
	if             reduce using rule 22
	then           reduce using rule 22
	else           reduce using rule 22
	match          reduce using rule 22
	data           reduce using rule 22
	ty             reduce using rule 22
	'('            reduce using rule 22
	')'            reduce using rule 22
	'['            reduce using rule 22
	']'            reduce using rule 22
	'{'            reduce using rule 22
	'}'            reduce using rule 22
	';'            reduce using rule 22
	','            reduce using rule 22
	'|'            reduce using rule 22
	'.'            reduce using rule 22
	'\\'           reduce using rule 22
	%eof           reduce using rule 22


State 23

	exprAtom -> term .                                  (rule 30)

	id             reduce using rule 30
	HOLE           reduce using rule 30
	number         reduce using rule 30
	string         reduce using rule 30
	boolean        reduce using rule 30
	'!'            reduce using rule 30
	'+'            reduce using rule 30
	'`'            reduce using rule 30
	let            reduce using rule 30
	where          reduce using rule 30
	if             reduce using rule 30
	then           reduce using rule 30
	else           reduce using rule 30
	match          reduce using rule 30
	data           reduce using rule 30
	ty             reduce using rule 30
	'('            reduce using rule 30
	')'            reduce using rule 30
	'['            reduce using rule 30
	']'            reduce using rule 30
	'{'            reduce using rule 30
	'}'            reduce using rule 30
	';'            reduce using rule 30
	','            reduce using rule 30
	'|'            reduce using rule 30
	'.'            reduce using rule 30
	'\\'           reduce using rule 30
	%eof           reduce using rule 30


State 24

	exprAtom -> record .                                (rule 33)

	id             reduce using rule 33
	HOLE           reduce using rule 33
	number         reduce using rule 33
	string         reduce using rule 33
	boolean        reduce using rule 33
	'!'            reduce using rule 33
	'+'            reduce using rule 33
	'`'            reduce using rule 33
	let            reduce using rule 33
	where          reduce using rule 33
	if             reduce using rule 33
	then           reduce using rule 33
	else           reduce using rule 33
	match          reduce using rule 33
	data           reduce using rule 33
	ty             reduce using rule 33
	'('            reduce using rule 33
	')'            reduce using rule 33
	'['            reduce using rule 33
	']'            reduce using rule 33
	'{'            reduce using rule 33
	'}'            reduce using rule 33
	';'            reduce using rule 33
	','            reduce using rule 33
	'|'            reduce using rule 33
	'.'            reduce using rule 33
	'\\'           reduce using rule 33
	%eof           reduce using rule 33


State 25

	exprAtom -> list .                                  (rule 32)

	id             reduce using rule 32
	HOLE           reduce using rule 32
	number         reduce using rule 32
	string         reduce using rule 32
	boolean        reduce using rule 32
	'!'            reduce using rule 32
	'+'            reduce using rule 32
	'`'            reduce using rule 32
	let            reduce using rule 32
	where          reduce using rule 32
	if             reduce using rule 32
	then           reduce using rule 32
	else           reduce using rule 32
	match          reduce using rule 32
	data           reduce using rule 32
	ty             reduce using rule 32
	'('            reduce using rule 32
	')'            reduce using rule 32
	'['            reduce using rule 32
	']'            reduce using rule 32
	'{'            reduce using rule 32
	'}'            reduce using rule 32
	';'            reduce using rule 32
	','            reduce using rule 32
	'|'            reduce using rule 32
	'.'            reduce using rule 32
	'\\'           reduce using rule 32
	%eof           reduce using rule 32


State 26

	exprAtom -> tuple .                                 (rule 31)

	id             reduce using rule 31
	HOLE           reduce using rule 31
	number         reduce using rule 31
	string         reduce using rule 31
	boolean        reduce using rule 31
	'!'            reduce using rule 31
	'+'            reduce using rule 31
	'`'            reduce using rule 31
	let            reduce using rule 31
	where          reduce using rule 31
	if             reduce using rule 31
	then           reduce using rule 31
	else           reduce using rule 31
	match          reduce using rule 31
	data           reduce using rule 31
	ty             reduce using rule 31
	'('            reduce using rule 31
	')'            reduce using rule 31
	'['            reduce using rule 31
	']'            reduce using rule 31
	'{'            reduce using rule 31
	'}'            reduce using rule 31
	';'            reduce using rule 31
	','            reduce using rule 31
	'|'            reduce using rule 31
	'.'            reduce using rule 31
	'\\'           reduce using rule 31
	%eof           reduce using rule 31


State 27

	hole -> HOLE .                                      (rule 4)

	id             reduce using rule 4
	HOLE           reduce using rule 4
	number         reduce using rule 4
	string         reduce using rule 4
	boolean        reduce using rule 4
	'!'            reduce using rule 4
	'+'            reduce using rule 4
	'`'            reduce using rule 4
	let            reduce using rule 4
	where          reduce using rule 4
	if             reduce using rule 4
	then           reduce using rule 4
	else           reduce using rule 4
	match          reduce using rule 4
	data           reduce using rule 4
	ty             reduce using rule 4
	'('            reduce using rule 4
	')'            reduce using rule 4
	'['            reduce using rule 4
	']'            reduce using rule 4
	'{'            reduce using rule 4
	'}'            reduce using rule 4
	';'            reduce using rule 4
	','            reduce using rule 4
	'->'           reduce using rule 4
	'<-'           reduce using rule 4
	'|'            reduce using rule 4
	'.'            reduce using rule 4
	'\\'           reduce using rule 4
	%eof           reduce using rule 4


State 28

	term -> number .                                    (rule 35)

	id             reduce using rule 35
	HOLE           reduce using rule 35
	number         reduce using rule 35
	string         reduce using rule 35
	boolean        reduce using rule 35
	'!'            reduce using rule 35
	'+'            reduce using rule 35
	'`'            reduce using rule 35
	let            reduce using rule 35
	where          reduce using rule 35
	if             reduce using rule 35
	then           reduce using rule 35
	else           reduce using rule 35
	match          reduce using rule 35
	data           reduce using rule 35
	ty             reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	'['            reduce using rule 35
	']'            reduce using rule 35
	'{'            reduce using rule 35
	'}'            reduce using rule 35
	';'            reduce using rule 35
	','            reduce using rule 35
	'->'           reduce using rule 35
	'<-'           reduce using rule 35
	'|'            reduce using rule 35
	'.'            reduce using rule 35
	'\\'           reduce using rule 35
	%eof           reduce using rule 35


State 29

	term -> string .                                    (rule 36)

	id             reduce using rule 36
	HOLE           reduce using rule 36
	number         reduce using rule 36
	string         reduce using rule 36
	boolean        reduce using rule 36
	'!'            reduce using rule 36
	'+'            reduce using rule 36
	'`'            reduce using rule 36
	let            reduce using rule 36
	where          reduce using rule 36
	if             reduce using rule 36
	then           reduce using rule 36
	else           reduce using rule 36
	match          reduce using rule 36
	data           reduce using rule 36
	ty             reduce using rule 36
	'('            reduce using rule 36
	')'            reduce using rule 36
	'['            reduce using rule 36
	']'            reduce using rule 36
	'{'            reduce using rule 36
	'}'            reduce using rule 36
	';'            reduce using rule 36
	','            reduce using rule 36
	'->'           reduce using rule 36
	'<-'           reduce using rule 36
	'|'            reduce using rule 36
	'.'            reduce using rule 36
	'\\'           reduce using rule 36
	%eof           reduce using rule 36


State 30

	term -> boolean .                                   (rule 37)
